--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -53,22 +53,22 @@
 	"updateList": {
 		"message": "Update lists..."
 	},
-	"tlUnified": {
+	"w_Unified": {
 		"message": "Unified"
 	},
-	"tlHome": {
+	"w_Home": {
 		"message": "Home"
 	},
-	"tlDM": {
-		"message": "DM"
+	"w_DM": {
+		"message": "DMs"
 	},
-	"tlFavorites": {
+	"w_Favorites": {
 		"message": "Favorites"
 	},
-	"tlLists": {
+	"w_Lists": {
 		"message": "Lists"
 	},
-	"tlSearch": {
+	"w_Search": {
 		"message": "Search"
 	},
 	"fromApp": {
@@ -391,5 +391,230 @@
 	},
 	"yearsAgo": {
 		"message": "yearsAgo"
+	},
+	"options_title": {
+		"message": "Chromed Bird Options"
+	},
+	"conf_saved": {
+		"message": "Your configuration has been successfully saved!"
+	},
+	"changes_restart": {
+		"message": "However, some of your changes require the extension to be restarted. Would you like to do it now?<br>    (This will reset your unread tweets count.)"
+	},
+	"remaining_api_hits": {
+		"message": "Remaining Twitter API Hits: "
+	},
+	"rate_limit_reset": {
+		"message": "Rate Limit Reset: "
+	},
+	"nerds_link": {
+		"message": "API Hits stats (for nerds)"
+	},
+	"g_ui": {
+		"message": "UI"
+	},
+	"l_name_attribute": {
+		"message": "Name in tweets:"
+	},
+	"o_screen_name": {
+		"message": "Screen name (nickname)"
+	},
+	"o_name": {
+		"message": "Real name"
+	},
+	"o_both": {
+		"message": "Both names"
+	},
+	"l_compose_position": {
+		"message": "Compose area position:"
+	},
+	"o_top": {
+		"message": "Top"
+	},
+	"o_bottom": {
+		"message": "Bottom"
+	},
+	"l_theme": {
+		"message": "UI Theme:"
+	},
+	"l_font_size": {
+		"message": "Font Size:"
+	},
+	"o_small": {
+		"message": "Small"
+	},
+	"o_normal": {
+		"message": "Normal"
+	},
+	"o_large": {
+		"message": "Large"
+	},
+	"o_extra_large": {
+		"message": "Extra Large"
+	},
+	"l_font_family": {
+		"message": "Font Family:"
+	},
+	"l_hover_timeout": {
+		"message": "Hover to read time (ms):"
+	},
+	"l_show_expanded_urls": {
+		"message": "Expand shortened URLs:"
+	},
+	"l_reply_all": {
+		"message": "Reply to all mentioned:"
+	},
+	"l_show_hits_in_popup": {
+		"message": "Show API hits count:"
+	},
+	"l_show_user_autocomplete": {
+		"message": "Autocomplete usernames:"
+	},
+	"l_icon_color": {
+		"message": "Icon color:"
+	},
+	"l_tweets_color_only_unified": {
+		"message": "Colors only in unified:"
+	},
+	"l_tweet_color": {
+		"message": "Tweet color:"
+	},
+	"w_Mentions": {
+		"message": "Mentions"
+	},
+	"btn_reset_popup_size": {
+		"message": "Reset Popup Size"
+	},
+	"g_notifications": {
+		"message": "Notifications"
+	},
+	"l_tweet_notification": {
+		"message": "Tweet Notification"
+	},
+	"l_change_icon": {
+		"message": "Change Icon"
+	},
+	"l_icon_color": {
+		"message": "Icon Color"
+	},
+	"notif_home": {
+		"message": "Home:"
+	},
+	"notif_mentions": {
+		"message": "Mentions:"
+	},
+	"notif_dms": {
+		"message": "DMs:"
+	},
+	"notif_lists": {
+		"message": "Lists:"
+	},
+	"notif_search": {
+		"message": "Search:"
+	},
+	"l_tweets_notification_style": {
+		"message": "Notification Style:"
+	},
+	"l_noti_on_page": {
+		"message": "Notify on Page"
+	},
+	"l_noti_desktop": {
+		"message": "Desktop Notifications"
+	},
+	"l_notification_fade_timeout": {
+		"message": "Notification Timeout (s):"
+	},
+	"g_shortener": {
+		"message": "Shortener"
+	},
+	"l_url_shortener": {
+		"message": "URL Shortener:"
+	},
+	"l_shortener_acct": {
+		"message": "Use Personal Account?"
+	},
+	"l_shortener_login": {
+		"message": "API Login:"
+	},
+	"l_shortener_key": {
+		"message": "API Key:"
+	},
+	"l_share_include_title": {
+		"message": "Include page title (sharing):"
+	},
+	"g_timelines": {
+		"message": "Timelines"
+	},
+	"notice_api_hits": {
+		"message": "You should keep API hits <span style=\"color: red;\">below <span class=\"__hourly_limit\"></span></span>! Otherwise Chromed Bird will stop working properly and timelines won't update anymore.<br><span style=\"color: red;\">Remember</span> that if you're using multiple Twitter clients you'll need to keep your API hits even lower."
+	},
+	"l_hits_notice": {
+		"message": "API hits per hour: "
+	},
+	"l_visible": {
+		"message": "Visible"
+	},
+	"l_refresh_interval": {
+		"message": "Refresh Interval (s)"
+	},
+	"l_include_in_unified": {
+		"message": "Include in unified timeline"
+	},
+	"l_tabs_count": {
+		"message": "Tabs Count"
+	},
+	"l_unified_timeline": {
+		"message": "Unified Timeline:"
+	},
+	"tml_favorites": {
+		"message": "Favorites:"
+	},
+	"l_blocked_users": {
+		"message": "Blocked Users:"
+	},
+	"notice_right_click_change": {
+		"message": "* Hey, now you can use the right-click context menu to change most of this settings directly into the popup window. Just get out of here! :)"
+	},
+	"l_tweets_per_page": {
+		"message": "Tweets per Page:"
+	},
+	"l_max_cached_tweets": {
+		"message": "Max Shown Tweets:"
+	},
+	"g_microblogging_service": {
+		"message": "Microblogging Service"
+	},
+	"g_advanced": {
+		"message": "Advanced"
+	},
+	"l_request_timeout": {
+		"message": "Request Timeout (ms):"
+	},
+	"l_base_url": {
+		"message": "Twitter's API URL:"
+	},
+	"l_base_oauth_url": {
+		"message": "OAuth URL:"
+	},
+	"l_same_signing_urls": {
+		"message": "Same signing URLs:"
+	},
+	"l_base_signing_url": {
+		"message": "API Signing URL:"
+	},
+	"l_base_oauth_signing_url": {
+		"message": "OAuth Signing URL:"
+	},
+	"l_base_search_url": {
+		"message": "Search API URL:"
+	},
+	"btn_save": {
+		"message": "Save"
+	},
+	"btn_reset": {
+		"message": "Reset"
+	},
+	"btn_default": {
+		"message": "Reset to default"
 	}
 }
