Adding Brazilian Portuguese translation

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -390,7 +390,7 @@
 		"message": "months"
 	},
 	"yearsAgo": {
-		"message": "yearsAgo"
+		"message": "years ago"
 	},
 	"options_title": {
 		"message": "Chromed Bird Options"
