Added translation for title "shorten current page" of "globe" image.

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -619,6 +619,9 @@
 	},
 	"shortenIt": {
 		"message": "Сократить!"
+	},
+	"shorten_current": {
+		"message": "Поделиться текущей страницей"
 	}
 	
 }
