Allowing a maximum number of displayed notifications at once. Closes #182

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -524,6 +524,9 @@
 	"l_notification_fade_timeout": {
 		"message": "Notification Timeout (s):"
 	},
+	"l_notification_max_popups": {
+		"message": "Notifications at once (-1: all):"
+	},
 	"g_shortener": {
 		"message": "Shortener"
 	},
