Full and better translation

--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -11,7 +11,7 @@
 		"description": "Text for composing new tweet"
 	},
 	"tweetit": {
-		"message": "Tweet"
+		"message": "Gönder"
 	},
 	"logout": {
 		"message": "Çıkış",
@@ -54,13 +54,13 @@
 		"message": "Listeler güncelleniyor..."
 	},
 	"w_Unified": {
-		"message": "Unified"
+		"message": "Birleşik"
 	},
 	"w_Home": {
-		"message": "Home"
+		"message": "Anasayfa"
 	},
 	"w_DM": {
-		"message": "DMs"
+		"message": "Mesajlar"
 	},
 	"w_Favorites": {
 		"message": "Favoriler"
@@ -72,16 +72,16 @@
 		"message": "Ara"
 	},
 	"fromApp": {
-		"message": "from"
+		"message": "istemci:"
 	},
 	"inReply": {
-		"message": "in reply to"
+		"message": "cevap olarak:"
 	},
 	"retweetedBy": {
-		"message": "retweeted by"
+		"message": "tekrar tweetleyen:"
 	},
 	"retweetedByMe": {
-		"message": "retweeted by me"
+		"message": "siz tarafından tekrar tweetlendi"
 	},
 	"unmarkFavorite": {
 		"message": "Favorilerden kaldır"
@@ -123,11 +123,11 @@
 		"message": "Kısaltmak için bir URL yapıştırın. Aktif sayfayı kısaltmak için sağdaki ikona tıklayın"
 	},
 	"timelineHome": {
-		"message": "Home",
+		"message": "Ana Sayfa",
 		"description": "The home time line tab"
 	},
 	"timelineDM": {
-		"message": "DM",
+		"message": "Mesajlar",
 		"description": "The direct message time line tab"
 	},
 	"timelineFavorites": {
@@ -152,7 +152,7 @@
 		}
 	},
 	"preventClosing": {
-		"message": "Click to prevent closing."
+		"message": "Kapanmaması için tıklayın."
 	},
 	"changeNotificationSettings": {
 		"message": "Bildirim seçeneklerini ayarlar sayfasından değiştirebilirsiniz."
@@ -170,13 +170,13 @@
 		"message": "Bir hata oluştu. Lütfen tekrar deneyin."
 	},
 	"ajaxFailed": {
-		"message": "AJAX request failed (bad connection?)"
+		"message": "AJAX isteği başarısız (kötü bağlantı?)"
 	},
 	"successAuth": {
 		"message": "Tebrikler, kimliğiniz doğrulandı. Chromed Bird'ün tadını çıkarın!"
 	},
 	"cbAuthorized": {
-		"message": "Chromed Bird authorized!"
+		"message": "Chromed Bird yetkili!"
 	},
 	"cbNotAuthorized": {
 		"message": "Bir hata oluştu. Lütfen Chromed Bird ikonuna tekrar tıklayın."
@@ -213,7 +213,7 @@
 		}
 	},
 	"queue_retried": {
-		"message": "retried $retries$ times since $timediff$ ago [$laststatus$]",
+		"message": "$timediff$ tarihinden beri $retries$ defa gönderilmeye çalıştı [$laststatus$]",
 		"placeholders": {
 			"retries": {
 				"content": "$1"
@@ -227,7 +227,7 @@
 		}
 	},
 	"ue_fetchingLists": {
-		"message": "Unexpected error $status$ fetching lists.",
+		"message": "Listeler alınırken $status$ hatası oluştu.",
 		"placeholders": {
 			"status": {
 				"content": "$1"
@@ -235,7 +235,7 @@
 		}
 	},
 	"ue_updatingTweets": {
-		"message": "Unexpected error $baseError$ updating tweets.",
+		"message": "Tweetler güncellenirken $baseError$ hatası oluştu.",
 		"placeholders": {
 			"baseError": {
 				"content": "$1"
@@ -243,10 +243,10 @@
 		}
 	},
 	"ue_updatingTweets2": {
-		"message": " If this timeout error is being shown repeatedly, please try logging out and logging in again."
+		"message": " Eğer bu hata ile çok sık karşılaşıyorsanız çıkış yapıp tekrar girmeyi deneyin."
 	},
 	"ue_deletingTweet": {
-		"message": "Unexpected error $status$ deleting tweet.",
+		"message": "Tweet silinirken $status$ hatası oluştu.",
 		"placeholders": {
 			"status": {
 				"content": "$1"
@@ -254,7 +254,7 @@
 		}
 	},
 	"ue_retweeting": {
-		"message": "Unexpected error $status$ retweeting.",
+		"message": "Tekrar tweetlerken $status$ hatası oluştu.",
 		"placeholders": {
 			"status": {
 				"content": "$1"
@@ -408,10 +408,10 @@
 		"message": "Bir sonraki Twitter API sıfırlama tarihi: "
 	},
 	"nerds_link": {
-		"message": "API Hits stats (for nerds)"
+		"message": "API kullanım istatistikleri"
 	},
 	"g_ui": {
-		"message": "UI"
+		"message": "Arayüz"
 	},
 	"l_name_attribute": {
 		"message": "Tweetlerdeki isimler nasıl görünsün?:"
@@ -456,7 +456,7 @@
 		"message": "Font tipi:"
 	},
 	"l_hover_timeout": {
-		"message": "Hover to read time (ms):"
+		"message": "Okunmak için üzerinde bekleme süresi (ms):"
 	},
 	"l_show_expanded_urls": {
 		"message": "Kısaltılmış adresleri genişlet:"
@@ -483,7 +483,7 @@
 		"message": "Mentions"
 	},
 	"btn_reset_popup_size": {
-		"message": "Reset Popup Size"
+		"message": "Pencere Boyutunu Sıfırla"
 	},
 	"g_notifications": {
 		"message": "Bildirimler"
@@ -498,7 +498,7 @@
 		"message": "Ikon rengi"
 	},
 	"notif_home": {
-		"message": "Home:"
+		"message": "Ana Sayfa:"
 	},
 	"notif_mentions": {
 		"message": "Mentions:"
@@ -516,7 +516,7 @@
 		"message": "Bildirim stili:"
 	},
 	"l_noti_on_page": {
-		"message": "Notify on Page"
+		"message": "Tarayıcı bildirimleri"
 	},
 	"l_noti_desktop": {
 		"message": "Masaüstü bildirimleri"
@@ -525,7 +525,7 @@
 		"message": "Bildirim zaman aşımı(s):"
 	},
 	"l_notification_max_popups": {
-		"message": "Notifications at once (-1: all):"
+		"message": "Maksimum bildirim sayısı (-1: hepsi):"
 	},
 	"g_shortener": {
 		"message": "Kısaltıcı"
@@ -537,10 +537,10 @@
 		"message": "Kişisel hesap kullan?"
 	},
 	"l_shortener_login": {
-		"message": "API Login:"
+		"message": "API Giriş:"
 	},
 	"l_shortener_key": {
-		"message": "API Key:"
+		"message": "API Anahtarı:"
 	},
 	"l_share_include_title": {
 		"message": "Sayfa başlığını dahil et:"
@@ -549,7 +549,7 @@
 		"message": "Timelines"
 	},
 	"notice_api_hits": {
-		"message": "Saatlik API limiti en fazla <span style=\"color: red;\"><span class=\"__hourly_limit\"></span></span> olmalıdır!<br>Eğer birden fazla Twitter istemcisi kullanıyorsanız aşağıdaki değerleri daha da azaltmalısınız."
+		"message": "Saatlik API limiti en fazla <span style=\"color: red;\"><span class=\"__hourly_limit\"></span></span> olabilir!<br>Eğer birden fazla Twitter istemcisi kullanıyorsanız aşağıdaki değerleri daha da azaltmalısınız."
 	},
 	"l_hits_notice": {
 		"message": "Saatlik API limiti: "
@@ -561,13 +561,13 @@
 		"message": "Yenileme aralığı(s)"
 	},
 	"l_include_in_unified": {
-		"message": "Include in unified timeline"
+		"message": "Birleşik akışa dahil et"
 	},
 	"l_tabs_count": {
 		"message": "Sekme sayısı"
 	},
 	"l_unified_timeline": {
-		"message": "Unified Timeline:"
+		"message": "Birleşik Akış:"
 	},
 	"tml_favorites": {
 		"message": "Favoriler:"
@@ -594,22 +594,22 @@
 		"message": "İstek zamanaşımı(ms):"
 	},
 	"l_base_url": {
-		"message": "Twitter API URL:"
+		"message": "Twitter API Adresi:"
 	},
 	"l_base_oauth_url": {
-		"message": "OAuth URL:"
+		"message": "OAuth Adresi:"
 	},
 	"l_same_signing_urls": {
-		"message": "Same signing URLs:"
+		"message": "Aynı Giriş Adresleri:"
 	},
 	"l_base_signing_url": {
-		"message": "API Signing URL:"
+		"message": "API Giriş Adresi:"
 	},
 	"l_base_oauth_signing_url": {
-		"message": "OAuth Signing URL:"
+		"message": "OAuth Giriş Adresi:"
 	},
 	"l_base_search_url": {
-		"message": "Search API URL:"
+		"message": "Arama API Adresi:"
 	},
 	"btn_save": {
 		"message": "Kaydet"
