--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -54,7 +54,7 @@
 		"message": "Listeler güncelleniyor..."
 	},
 	"w_Unified": {
-		"message": "Birleşik"
+		"message": "Tümü"
 	},
 	"w_Home": {
 		"message": "Anasayfa"
@@ -117,10 +117,10 @@
 		"message": "Tümünü okundu olarak işaretle"
 	},
 	"newToken": {
-		"message": "Request another token"
+		"message": "Başka bir işaretçi iste"
 	},
 	"shortenerIdleString": {
-		"message": "Kısaltmak için bir URL yapıştırın. Aktif sayfayı kısaltmak için sağdaki ikona tıklayın"
+		"message": "Buraya kısaltılacak adresi yazın. Açık sayfayı sağdaki simgeden kısaltın."
 	},
 	"timelineHome": {
 		"message": "Ana Sayfa",
@@ -205,7 +205,7 @@
 		"message": "Kuyruktaki mesajlar:"
 	},
 	"queue_trying": {
-		"message": "trying to send for $timediff$",
+		"message": "$timediff$ tarihinden beri gönderilmeyi bekliyor",
 		"placeholders": {
 			"timediff": {
 				"content": "$1"
@@ -262,7 +262,7 @@
 		}
 	},
 	"ue_markFavorite": {
-		"message": "Unexpected error $status$ marking as favorite.",
+		"message": "Favorilere eklerken $status$ hatası oluştu.",
 		"placeholders": {
 			"status": {
 				"content": "$1"
@@ -270,7 +270,7 @@
 		}
 	},
 	"ue_unmarkFavorite": {
-		"message": "Unexpected error $status$ unmarking as favorite.",
+		"message": "Favoriden kaldırırken $status$ hatası oluştu.",
 		"placeholders": {
 			"status": {
 				"content": "$1"
@@ -289,13 +289,13 @@
 		}
 	},
 	"newtweets_singular": {
-		"message": "new tweet"
+		"message": "yeni tweet"
 	},
 	"newtweets_plural": {
-		"message": "new tweets"
+		"message": "yeni tweet"
 	},
 	"btnAuthorize": {
-		"message": "Authorize!"
+		"message": "Yetkilendir!"
 	},
 	"exceededAPIHits": {
 		"message": "Günlük API kullanım limitini aştınız. Lütfen <a href='javascript:chrome.tabs.create({url:\"$options_url$\"})'>ayarlar sayfasından</a> yenileme aralığını kontrol edin. Chromed Bird $nextResetDate $nextResetTime$ tarihine kadar güncellenmeyecek.",
@@ -337,10 +337,10 @@
 		}
 	},
 	"justNow": {
-		"message": "Hemen şimdi"
+		"message": "Az önce"
 	},
 	"minuteAgo": {
-		"message": "1 dakikadan az"
+		"message": "Saniyeler"
 	},
 	"minutes": {
 		"message": "$nr_of_minutes$ $minutes$ önce",
@@ -402,7 +402,7 @@
 		"message": "Bazı ayarların aktif olması için eklentinin yeniden başlatılması gerek. Bunu şimdi yapmak ister misiniz?<br>    (Okunmamış tweet sayınız sıfırlanacak)"
 	},
 	"remaining_api_hits": {
-		"message": "Remaining Twitter API Hits: "
+		"message": "Kalan Twitter API Kullanım Sayısı: "
 	},
 	"rate_limit_reset": {
 		"message": "Bir sonraki Twitter API sıfırlama tarihi: "
@@ -438,7 +438,7 @@
 		"message": "Tema:"
 	},
 	"l_font_size": {
-		"message": "Font boyutu:"
+		"message": "Yazı boyutu:"
 	},
 	"o_small": {
 		"message": "Küçük"
@@ -453,34 +453,34 @@
 		"message": "Çok büyük"
 	},
 	"l_font_family": {
-		"message": "Font tipi:"
+		"message": "Yazıtipi:"
 	},
 	"l_hover_timeout": {
-		"message": "Okunmak için üzerinde bekleme süresi (ms):"
+		"message": "Okumak için üzerinde bekleme süresi (ms):"
 	},
 	"l_show_expanded_urls": {
 		"message": "Kısaltılmış adresleri genişlet:"
 	},
 	"l_reply_all": {
-		"message": "Reply to all mentioned:"
+		"message": "Tüm bahsedilenleri cevapla:"
 	},
 	"l_show_hits_in_popup": {
-		"message": "Show API hits count:"
+		"message": "API kullanım sayısını göster:"
 	},
 	"l_show_user_autocomplete": {
 		"message": "Kullanıcı adlarını otomatik tamamla:"
 	},
 	"l_icon_color": {
-		"message": "İkon rengi:"
+		"message": "Simge rengi:"
 	},
 	"l_tweets_color_only_unified": {
-		"message": "Colors only in unified:"
+		"message": "Sadece birleşik akışta renkler:"
 	},
 	"l_tweet_color": {
 		"message": "Tweet rengi:"
 	},
 	"w_Mentions": {
-		"message": "Mentions"
+		"message": "Bahsetmeler"
 	},
 	"btn_reset_popup_size": {
 		"message": "Pencere Boyutunu Sıfırla"
@@ -492,16 +492,16 @@
 		"message": "Tweet bildirimi"
 	},
 	"l_change_icon": {
-		"message": "İkonu değiştir"
+		"message": "Simgeyi değiştir"
 	},
 	"l_icon_color": {
-		"message": "Ikon rengi"
+		"message": "Simge rengi"
 	},
 	"notif_home": {
 		"message": "Ana Sayfa:"
 	},
 	"notif_mentions": {
-		"message": "Mentions:"
+		"message": "Bahsetmeler:"
 	},
 	"notif_dms": {
 		"message": "Direkt iletiler:"
@@ -546,7 +546,7 @@
 		"message": "Sayfa başlığını dahil et:"
 	},
 	"g_timelines": {
-		"message": "Timelines"
+		"message": "Akışlar"
 	},
 	"notice_api_hits": {
 		"message": "Saatlik API limiti en fazla <span style=\"color: red;\"><span class=\"__hourly_limit\"></span></span> olabilir!<br>Eğer birden fazla Twitter istemcisi kullanıyorsanız aşağıdaki değerleri daha da azaltmalısınız."
@@ -576,7 +576,7 @@
 		"message": "Engellenen kullanıcılar:"
 	},
 	"notice_right_click_change": {
-		"message": "* Hey, now you can use the right-click context menu to change most of this settings directly into the popup window. Just get out of here! :)"
+		"message": "* Artık pencerede sağ tıklayarak buradaki ayarların çoğunu pencere üzerinden değiştirebilirsiniz."
 	},
 	"l_tweets_per_page": {
 		"message": "Sayfa başı gösterilecek tweet sayısı:"
