Updated russian locale. Thanks to dima mikhailov <dima@redair.ru>

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -167,7 +167,7 @@
 		"message": "Загрузка длинной ссылки..."
 	},
 	"errorExpandingUrl": {
-		"message": "Извените, что то пошло не так, попробуйте еще раз."
+		"message": "Извините, что-то пошло не так, <nobr>попробуйте</nobr> еще раз."
 	},
 	"ajaxFailed": {
 		"message": "Сбой запрос AJAX (плохое содинение?)"
@@ -179,10 +179,10 @@
 		"message": "Chromed Bird авторизован!"
 	},
 	"cbNotAuthorized": {
-		"message": "Упс... Что то пошло не так. Попробуйте нажать на иконку Chromed Bird снова."
+		"message": "Упс... Что-то пошло не так. Попробуйте нажать на иконку Chromed Bird снова."
 	},
 	"authorizing": {
-		"message": "Пожалуйста подождите, авторизуем Chromed Bird..."
+		"message": "Пожалуйста, подождите, авторизуем Chromed Bird..."
 	},
 	"yourPIN": {
 		"message": "Ваш PIN: $pin$",
@@ -329,7 +329,7 @@
 		}
 	},
 	"oAuthError": {
-		"message": "Во время проверки подлинности возникла ошибка: $errorMessage$. Пожалуйста, <a href=\"javascript:OAuth.requestNewToken();\">нажмите что бы повторить процесс</a>",
+		"message": "Во время проверки подлинности возникла ошибка: $errorMessage$. Пожалуйста, <a href=\"javascript:OAuth.requestNewToken();\">нажмите чтобы повторить процесс</a>",
 		"placeholders": {
 			"errorMessage": {
 				"content": "$1"
@@ -573,7 +573,7 @@
 		"message": "Заблокированые пользователи:"
 	},
 	"notice_right_click_change": {
-		"message": "* Эй, теперь вы можете нажать правой кнопкой, что бы изменить большинство этих значений прямо из всплывающего окна. Просто убирайтесь отсюда! :)"
+		"message": "* Эй, теперь вы можете нажать правой кнопкой, чтобы изменить большинство этих значений прямо из всплывающего окна. Просто убирайтесь отсюда! :)"
 	},
 	"l_tweets_per_page": {
 		"message": "Твитов на странице:"
@@ -615,7 +615,7 @@
 		"message": "Сбросить"
 	},
 	"btn_default": {
-		"message": "По умолчанию"
+		"message": "По-умолчанию"
 	},
 	"shortenIt": {
 		"message": "Сократить!"
@@ -623,5 +623,5 @@
 	"shorten_current": {
 		"message": "Поделиться текущей страницей"
 	}
-	
+
 }
