--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -625,5 +625,8 @@
 	},
 	"shorten_current": {
 		"message": "Share current page"
+	},
+	"tweet_send_error": {
+		"message": "An error occurred while trying to send your tweet. Maybe Twitter is acting weird? You can try it again but please double check your account to prevent duplicated messages."
 	}
 }
