word "ago" was forgotten in "minuteAgo" string

--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -340,7 +340,7 @@
 		"message": "Az önce"
 	},
 	"minuteAgo": {
-		"message": "Saniyeler"
+		"message": "Saniyeler önce"
 	},
 	"minutes": {
 		"message": "$nr_of_minutes$ $minutes$ önce",
