Fixing invalid localization entries

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -50,7 +50,7 @@
 	"selectList": {
 		"message": "- Selecciona una lista -"
 	},
-	"updateLists": {
+	"updateList": {
 		"message": "Actualizar Listas..."
 	},
 	"w_Unified": {
