--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -11,7 +11,7 @@
 		"message": "Opties",
 		"description": "Options link"
 	},
-	"allRead": {
+	"markAllRead": {
 		"message": "Alles als gelezen markeren"
 	},
 	"newToken": {
